      makes the log messages nicer.

  o Minor bugfixes (other):
    - Stop allowing hibernating servers to be "stable" or "fast".
    - Check return values from pthread_mutex functions.
    - Don't save non-general-purpose router descriptors to the disk cache,
      because we have no way of remembering what their purpose was when
      we restart.

  o Minor bugfixes (controller), reported by daejees:
    - Make 'getinfo fingerprint' return a 551 error if we're not a
      server, so we match what the control spec claims we do.
    - Fix a typo in an error message when extendcircuit fails that
      caused us to not follow the \r\n-based delimiter protocol.
    - The control spec described a GUARDS event, but the code
      implemented a GUARD event. Standardize on GUARD, but support people
      asking for GUARDS too.
    - Correct the control spec to match how the code actually responds
      to 'getinfo addr-mappings/*'.

  o Code simplifications and refactoring
    - Stop passing around circuit_t and crypt_path_t pointers that are
      implicit in other procedure arguments.
    - Drop the old code to choke directory connections when the corresponding
      or connections got full: thanks to the cell queue feature, or conns
      don't get full any more.
    - Make dns_resolve handle attaching connections to circuits properly,
      so the caller doesn't have to.

Changes in version 0.1.2.12-rc - 2007-03-16
  o Major bugfixes:
    - Fix an infinite loop introduced in 0.1.2.7-alpha when we serve
      directory information requested inside Tor connections (i.e. via
      begin_dir cells). It only triggered when the same connection was
      serving other data at the same time. Reported by seeess.

  o Minor bugfixes:
    - When creating a circuit via the controller, send a 'launched'
      event when we're done, so we follow the spec better.


Changes in version 0.1.2.11-rc - 2007-03-15
  o Minor bugfixes (controller), reported by daejees: